# IotaWallet.NET

./: .gitignore  README.md
.github/workflows/: Compile.yml  GithubNuget.yml  Nuget.yml  list.yml  rust_linux.yml  rust_windows.yml
csharp/IotaWalletNet/: IotaWalletNet.sln
csharp/IotaWalletNet/IotaWalletNet/: Account.cs  IotaWalletNet.csproj  RustCommons.cs  SecretManager.cs  Wallet.cs  WalletManager.cs
csharp/IotaWalletNet/IotaWalletNet.Application/: Account.cs  IotaWalletNet.Application.csproj  Wallet.cs
csharp/IotaWalletNet/IotaWalletNet.Console/: IotaWalletNet.Main.csproj  IotaWalletNet.Testbed.csproj  Program.cs
csharp/IotaWalletNet/IotaWalletNet.Domain/: IotaWalletNet.Domain.csproj  Wallet.cs
csharp/IotaWalletNet/IotaWalletNet.Domain/Options/: ClientOptions.cs  SecretManagerOptions.cs  StrongholdOptions.cs  WalletOptions.cs
csharp/IotaWalletNet/IotaWalletNet.Domain/PlatformInvoke/: RustBridge.cs  RustBridgeCommunicator.cs  RustBridgeErrorResponse.cs  RustBridgeGenericResponse.cs  RustBridgeResponse.cs  RustBridgeResponseBase.cs  RustBridgeResponseError.cs  RustBridgeResponseErrorPayload.cs
csharp/IotaWalletNet/IotaWalletNet.Main/: IotaWalletNet.Main.csproj  Program.cs
csharp/IotaWalletNet/IotaWalletNet.Main/Examples/: JsonHelper.cs
csharp/IotaWalletNet/IotaWalletNet.Tests/: IotaWalletNet.Tests.csproj
rust/bindings/: Cargo.toml
rust/bindings/snapshot_test_dir/: test.stronghold
rust/bindings/src/: cmain.rs  lib.rs  main.rs
rust/bindings/src/commons/: mod.rs
rust/bindings/src/secretmanager/: mod.rs
rust/bindings/src/walletmanager/: mod.rs
(+392 files in other folders)
