[package]
name = "bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bindings"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop" }
libc = "0.2"
futures = "0.3"
serde_json = "1.0.85"
serde = "1.0.144"