[package]
name = "bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bindings"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
futures =  { version = "0.3.23", default-features = false }
once_cell = { version = "1.13.1", default-features = false }
serde = { version = "1.0.143", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.83", default-features = false }
tokio = { version = "1.20.1", default-features = false}
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop" , features = ["message_interface", "events"]}
